comitão de todas as correções de rotas
