# src/api/usuarios.js
@@ -5,10 +5,13 @@ const { check, validationResult } = require('express-validator')
 const jwt = require('jsonwebtoken')
 const JWTSecret = '::!Luiza<code>3::Squad-C::ENIACgirls!::'
 const autenticacao = require('./functions');
+const UsuarioService = require('../services/usuarios');
+
+const usuarioService = new UsuarioService(usuario);
 
 router.get('/', autenticacao, async (req, res) => {
   /*
-    #swagger.tags = ['Usuários']
+    #swagger.tags = ['Usuario']
     #swagger.description = 'Endpoint parra obter uma lista de usuários' 
 
     #swagger.security = [{
@@ -26,12 +29,32 @@ router.get('/', autenticacao, async (req, res) => {
       description: 'Desculpe, tivemos um problema com a requisição'
     }
   */
-    const usuarios = await usuario.findAll();
+    const usuarios = await usuarioService.get();
     res.status(200).json(usuarios);
 })
 
 router.post('/', 
   async (req, res) => {
+
+    /*
+    #swagger.tags = ['Usuario']
+    #swagger.description = 'Endpoint para cadastrar um novo usuário' 
+
+    #swagger.security = [{
+      "apiKeyAuth": []
+    }]
+    
+    #swagger.responses[200] = {
+      schema: { $ref: "#/definitions/Usuario"},
+      description: 'Usuario encontrado'
+    }
+    #swagger.responses[404] = {
+      description: 'Usuario não encontrado'
+    }
+    #swagger.responses[400] = {
+      description: 'Desculpe, tivemos um problema com a requisição'
+    }
+  */
     const { nome, email, senha } = req.body
     try {
       await usuario.create({ nome, email, senha })
@@ -42,10 +65,29 @@ router.post('/',
 })
 
 router.post('/login', 
-  check('email')
-    .not().isEmpty()
-    .withMessage('Campo email é obrigatório!'),
+  check('email').not().isEmpty().withMessage('Campo email é obrigatório!'),
   async (req, res) => {
+
+    /*
+    #swagger.tags = ['Usuario']
+    #swagger.description = 'Endpoint para gerar um token de usuário' 
+
+    #swagger.security = [{
+      "apiKeyAuth": []
+    }]
+    
+    #swagger.responses[200] = {
+      schema: { $ref: "#/definitions/Usuario"},
+      description: 'Usuario encontrado'
+    }
+    #swagger.responses[404] = {
+      description: 'Usuario não encontrado'
+    }
+    #swagger.responses[400] = {
+      description: 'Desculpe, tivemos um problema com a requisição'
+    }
+  */
+
     const errors = validationResult(req)
     if (!errors.isEmpty()) {
       return res.status(400).json({ errors: errors.array() })
